                        and for correcting the set up of the https protocol handling.
Thanks to Perry Doell for the methods to examine cookies on WebConversation
Thanks to Ken Hygh for the proper handling of parameters with no specified type
Thanks to Gabriel Hauser for finding a bug in the handling of parameter defaults 

Revision History:
17-Oct-00 1.1
Additions:
    1. It is now possible to set a delay in the handling of redirect requests, if necessary
    2. The WebResponse now can return the response code associated with it (2xx)
    3. An exception (HttpException or a subclass) is now thrown on all client and server errors (4xx or 5xx)
     
Problems corrected:
    1. Unnamed frames are now handled
    2. Empty parameter values are now handled

 6-Oct-00
Problems corrected:
    1. Base tag is now handled to override defaults for page URL and target
    
 5-Oct-00
Problems corrected:
    1. Blank "src" attributes in FRAME nodes now correctly result in a blank page
    2. The "_self" target is now handled as the default target
    
 4-Oct-00
Additions:
    1. Frames are now supported. The WebConversation method has two methods: getFrameNames and getFrameContents which
       allow manipulation of frames.
    2. Calling HttpUnitOptions.setImagesTreatedAsAltText( true ) will cause the ALT text in images to be treated as ordinary
       text
       
Problems corrected:
    1. It is no longer necessary to edit the java.security file to enable HTTPS support. Just install the JSSE jars
       in your classpath.
    2. Parameters with no type specified are now properly handled as text
    

28-Sep-00
Additions:
    1. PseudoServer class is now used by unit tests to handle requests. This will enable development of frames capability
    2. Https support is now built in; however, it depends on the JSSE extension (not included). 
       See http://java.sun.com/products/jsse and be careful to follow the installation instructions
    
25-Sep-00
Problems corrected: