@@ -31,12 +31,12 @@ Several working example files come with the distribution download.</blockquote>
 
 <h2>Where do I get releases?</h2>
 <blockquote>The latest release of HttpUnit is available 
-<var:dist> from the <a href="http://httpunit.sourceforge.net"><var:dist> HttpUnit home page</A>
-<var:publish as a <a href="http://httpunit.sourceforge.net/httpunit_<version>.zip"><var:publish zip file</A>
-.<var:publish <br><var:publish Other builds are available by <a href="ftp://httpunit.sourceforge.net/pub/httpunit">
-<var:publish anonymous ftp</a>.
-<b><var:publish Note: Andy Quick has dropped support for JTidy, a library on which HttpUnit depends. I am investigating the situation.
-For now, you may download it from <a href="Tidy.jar.zip"><var:publish this site</a></b>.
+<var:dist from the <a href="http://httpunit.sourceforge.net"><var:dist HttpUnit home page</A>
+<var:publish> as a <a href="http://httpunit.sourceforge.net/httpunit_<version>.zip"><var:publish> zip file</A>
+.<var:publish> <br><var:publish> Other builds are available by <a href="ftp://httpunit.sourceforge.net/pub/httpunit">
+<var:publish> anonymous ftp</a>.
+<b><var:publish> Note: JTidy is now being hosted on SourceForge. 
+You may download it from <a href="http://sourceforge.net/project/showfiles.php?group_id=13153"><var:publish> the project download area</a></b>.
 </blockquote>
  
 <h2>How do I contribute, give feedback, fix bugs and so on?</h2>
@@ -48,7 +48,7 @@ the code.
 a cvs client, accessing the repository at <code>:pserver:anonymous@cvs.httpunit.sourceforge.net:/cvsroot/httpunit</code>.
 </ul>
 
-<hr><P><font size=-2><var:publish Hosted by
+<hr><P><font size=-2><var:publish> Hosted by
 <IMG SRC="http://sourceforge.net/sflogo.php?group_id=6550&type=1"
 WIDTH="88" HEIGHT="31" BORDER="0" ALT="SourceForge Logo" NATURALSIZEFLAG="0"
 ALIGN="TOP"></font></p>
