@@ -224,10 +224,13 @@ class ParsedHTML {
             } else {
                 for (int j = 0; j < tables[i].getRowCount(); j++) {
                     for (int k = 0; k < tables[i].getColumnCount(); k++) {
-                        WebTable[] innerTables = tables[i].getTableCell(j,k).getTables();
-                        if (innerTables.length != 0) {
-                            WebTable result = getTableStartingWith( text, innerTables );
-                            if (result != null) return result;
+                        TableCell cell = tables[i].getTableCell(j,k);
+                        if (cell != null) {
+                            WebTable[] innerTables = cell.getTables();
+                            if (innerTables.length != 0) {
+                                WebTable result = getTableStartingWith( text, innerTables );
+                                if (result != null) return result;
+                            }
                         }
                     }
                 }
@@ -250,10 +253,13 @@ class ParsedHTML {
             } else {
                 for (int j = 0; j < tables[i].getRowCount(); j++) {
                     for (int k = 0; k < tables[i].getColumnCount(); k++) {
-                        WebTable[] innerTables = tables[i].getTableCell(j,k).getTables();
-                        if (innerTables.length != 0) {
-                            WebTable result = getTableStartingWithPrefix( text, innerTables );
-                            if (result != null) return result;
+                        TableCell cell = tables[i].getTableCell(j,k);
+                        if (cell != null) {
+                            WebTable[] innerTables = cell.getTables();
+                            if (innerTables.length != 0) {
+                                WebTable result = getTableStartingWithPrefix( text, innerTables );
+                                if (result != null) return result;
+                            }
                         }
                     }
                 }
