@@ -8,10 +8,9 @@ it will typically examine the response either textually or as a DOM, and create 
 requests based on either submitting a form or clicking on a link.
 
 <H2>Installation</H2>
-The package depends on <A HREF="http://httpunit.sourceforge.net/Tidy.jar.zip">JTidy</A>, created by Andy Quick.
+The package depends on <A HREF="http://lempinen.net/sami/jtidy">JTidy</A>, an HTML parser/validator.
 The jtidy.jar must be in the class path ahead of any other implementation of the DOM classes. In addition,
-unit tests will require <A HREF=http://www.xprogramming.com/ftp/TestingFramework/JUnit/junit32.zip>JUnit</A> 
-as well.
+unit tests will require <A HREF="http://junit.org/">JUnit</A> as well.
 
 
 <H2>Example</H2>
